# document_search_app

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/dependencies/: es_conn.py
backend/app/api/routers/: check.py  store.py
backend/app/config/: check_criteria.json  create_env_file.py  logging.conf
backend/app/models/: check.py  store.py
backend/app/services/: elastic_search.py
backend/app/tests/: test_main.py
backend/app/tests/pre_test_setup/: create_es_test_index.py
backend/app/tests/services/: test_elastic_search.py
backend/scripts/: create_db.sh  insert_secrets.sh  run_tests.sh
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/assets/styles/: main.css
frontend/src/components/page-components/: ContentParameters.js  DisplayContentBox.js  OutputBox.js
frontend/src/components/page-components/parameter-boxes/: ParameterBox.js  Screener.js  Upload.js
frontend/src/components/ui/: Box.js  BoxContainer.js  HeaderBar.js  Input.js
frontend/src/pages/: Home.js
frontend/src/services/: APICalls.js  FileReader.js  FillTables.js  UpdateParameterContent.js
